# pylytic

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
docs/: design.md
pylytic/: anomaly_detection.py  clustering.py  pylytic.py  timeseries_prediction.py
src/pylytic/: anomaly_detection.py  classification.py  clustering.py  core.py  regression.py  timeseries_prediction.py
tests/: conftest.py  context.py  test_core.py  test_pylytic.py  test_timeseries_prediction.py
